--- a/mainapp/templates/mainapp/ngo_form.html
+++ b/mainapp/templates/mainapp/ngo_form.html
@@ -4,6 +4,11 @@
 {% block content %}
   <div class="text-right">
     <a href="{% url 'ngo_download_view' %}">Download NGO list</a>
+    <form action="{% url 'ngo_download_view' %}" method="post" name="district">{% csrf_token %}
+      <a >NGO by district  </a>
+      {{ form.district}}
+      <input type="submit" value="Download" />
+    </form>
   </div>
 
 <p class="text-center">
