--- a/mainapp/templates/mainapp/ngo_form.html
+++ b/mainapp/templates/mainapp/ngo_form.html
@@ -3,12 +3,11 @@
 
 {% block content %}
   <div class="text-right">
-    <a href="{% url 'ngo_download_view' %}">Download NGO list</a>
-    <form action="{% url 'ngo_download_view' %}" method="post" name="district">{% csrf_token %}
-      <a >NGO by district  </a>
-      {{ form.district}}
+    <a href="{% url 'ngo_download_view' %}">Download NGO list</a><br>
+    <form style="margin-right: 0;" action="{% url 'ngo_download_view' %}" method="get" name="district">{% csrf_token %}
+      NGO list by District {{ form.district}}
       <input type="submit" value="Download" />
-    </form>
+  </form>
   </div>
 
 <p class="text-center">
